styles/style.css
/* ... */
.timeline {
  flex: auto;
  width: auto;
  height: 100%;
  overflow: auto;
  background-color: white;
}

.tweet__body {
  display: flex;
  padding: 8px;
  border-bottom: solid 1px var(--color-timeline-border);
}
.tweet__body:hover {
  background-color: var(--bg-color-panel-hover);
}
.tweet__body.tweet__body_mention {
  color: #fc4d5d;
  background-color: #fff7f7;
}
.tweet__body.tweet__body_mention:hover {
  background-color: #ffe7e7;
}
.tweet__body.tweet__body_focused {
  color: white;
  background-color: var(--bg-color-focused);
}
.tweet__body.tweet__body_related {
  background-color: #f7ffe9;
  color: #002010;
}
.tweet__body.tweet__body_related:hover {
  background-color: #e7efd9;
}
.tweet__body.tweet__body_user-related {
  background-color: #e8f0ff;
}
.tweet__body.tweet__body_user-related:hover {
  background-color: #d8e0ef;
}
.tweet__icon {
  flex: none;
  width: 56px;
  height: 56px;
}
.tweet__secondary {
  flex: none;
  width: 20%;
  max-width: 120px;
  display: flex;
  flex-direction: column;
  padding-right: 8px;
}
.tweet__secondary-screenname {
  flex: none;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: var(--text-link-color);
}
.tweet__secondary-screenname.tweet__secondary-screenname_focused {
  color: white;
}
.tweet__secondary-name {
  flex: none;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 0.7rem;
  font-weight: bold;
}
.tweet__secondary-retweetedby {
  flex: none;
  margin-top: auto;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: var(--color-weak-text-link);
  font-size: 0.8rem;
}
.tweet__secondary-retweetedby.tweet__secondary-retweetedby_focused {
  color: var(--color-focused-weak);
}
.tweet__primary {
  flex: auto;
  width: auto;
  display: flex;
  flex-direction: column;
}
.tweet__primary-footer {
  flex: none;
  display: flex;
  margin-top: 4px;
  font-size: 0.7rem;
}
.tweet__primary-created-at {
  flex: none;
  color: var(--color-weak-text-link);
  text-align: right;
  cursor: pointer;
  text-decoration: none;
}
.tweet__primary-created-at:hover {
  text-decoration: underline;
}
.tweet__primary-created-at.tweet__primary-created-at_focused {
  color: var(--color-focused-weak);
}
.tweet__primary-conversation {
  flex: none;
  color: var(--color-weak-text-link);
}
.tweet__primary-conversation.tweet__primary-conversation_focused {
  color: var(--color-focused-weak);
}
.tweet__text {
  flex: auto;
  word-wrap: break-word;
  word-break: break-all;
  white-space: pre-wrap;
}
.tweet__text-hashtag,
.tweet__text-mention,
.tweet__text-url {
  color: var(--text-link-color);
}
.tweet__text-hashtag.tweet__text-hashtag_focused,
.tweet__text-mention.tweet__text-mention_focused,
.tweet__text-url.tweet__text-url_focused {
  color: var(--color-focused-weak);
}
.tweet__quoted {
  display: flex;
  flex-direction: column;
  background-color: var(--bg-color-panel-hover);
  border: solid 1px var(--color-timeline-border);
  margin: 4px 0 4px 4px;
  padding: 8px;
  border-radius: 8px;
}
.tweet__quoted.tweet__quoted_focused {
  background-color: #79bcff;
  border-color: #99ccff;
}
.tweet__quoted-icon {
  margin-right: 4px;
  cursor: pointer;
}
.tweet__quoted-header {
  color: #777777;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin-bottom: 4px;
}
.tweet__quoted-text {
  color: #555555;
  word-wrap: break-word;
  word-break: break-all;
  white-space: pre-wrap;
}
.tweet__quoted-text-hashtag,
.tweet__quoted-text-mention,
.tweet__quoted-text-url {
  color: #808080;
}
.tweet__media {
  display: flex;
  align-items: center;
  margin: 8px 0;
}
.tweet__media-wrapper {
  margin: 4px;
}
.tweet__media-picture {
  border-radius: 8px;
  box-sizing: border-box;
  border: 1px solid #dddddd;
  object-fit: cover;
  max-width: 100%;
  cursor: pointer;
}

.tweet-actions {
  display: flex;
  color: var(--color-weak-text-link);
}
.tweet-actions.tweet-actions_focused {
  color: var(--color-focused-weak);
}
.tweet-actions > * {
  flex: auto;
  cursor: pointer;
  margin: 0 8px;
}
.tweet-actions__with-count {
  display: flex;
  min-width: 2em;
}
.tweet-actions__count {
  margin-left: 4px;
}
.tweet-actions__others {
  cursor: pointer;
}
.tweet-actions__others-menu {
  display: flex;
  flex-direction: column;
  background-color: white;
  padding: 4px;
}
.tweet-actions__others-menu-item {
  color: black;
  font-size: 0.8rem;
  cursor: default;
}
.tweet-actions__others-menu-item:hover {
  background-color: #e0e0ee;
}

.activity {
  display: flex;
  flex-direction: column;
  border-bottom: solid 1px var(--color-timeline-border);
  padding: 8px;
}
.activity:hover {
  background-color: var(--bg-color-panel-hover);
}
.activity.activity_mini {
  flex-direction: row;
}
.activity.activity_focused {
  color: white;
  background-color: var(--bg-color-focused);
}
.activity__header {
  display: flex;
  align-items: center;
  white-space: nowrap;
  overflow: hidden;
  font-weight: bold;
}
.activity__header.activity__header_mini {
  width: calc(56px + 20%);
  max-width: 176px; /* icon width + secondary width */
  padding-right: 8px;
}
.activity__user-icons {
  overflow: hidden;
  display: flex;
}
.activity__user-icons > * {
  margin: 0 4px;
  border: solid 1px var(--color-timeline-border);
  width: 24px;
  height: 24px;
  border-radius: 4px;
}
.activity__created-at {
  font-weight: normal;
  overflow: hidden;
  color: var(--color-weak-text-link);
  margin-left: auto;
}
.activity__created-at.activity__created-at_focused {
  color: var(--color-focused-weak);
}
.activity__text {
  margin-top: 8px;
  overflow: hidden;
}
.activity__text.activity__text_mini {
  margin: auto 0px;
}
.activity__text > * {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.activity__icon {
  border-radius: 20%;
  margin-right: 4px;
  color: white;
}
.activity__icon.activity__icon_liked {
  background-color: #ff4f44;
  padding: 4px;
  font-size: 0.7em;
}
/* ... */

